src/main/java/de/dfki/mlt/rudimant/compiler/io/VondaGrammar.output
State 24 conflicts: 1 shift/reduce
State 89 conflicts: 2 shift/reduce
State 92 conflicts: 2 shift/reduce
State 95 conflicts: 1 shift/reduce
State 96 conflicts: 1 shift/reduce
State 101 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce, 1 reduce/reduce
State 198 conflicts: 3 shift/reduce, 1 reduce/reduce
State 207 conflicts: 1 shift/reduce
State 247 conflicts: 1 shift/reduce
State 300 conflicts: 1 shift/reduce
State 323 conflicts: 1 shift/reduce
State 357 conflicts: 1 shift/reduce


Grammar

    0 $accept: grammar_file $end

    1 grammar_file: visibility_spec method_declaration grammar_file
    2             | method_declaration grammar_file
    3             | statement grammar_file
    4             | imports grammar_file
    5             | visibility_spec var_def grammar_file
    6             | %empty

    7 visibility_spec: PUBLIC
    8                | PROTECTED
    9                | PRIVATE

   10 imports: IMPORT VARIABLE path ';'

   11 path: %empty
   12     | '.' VARIABLE path

   13 statement: block
   14          | exp ';'
   15          | grammar_rule
   16          | set_operation
   17          | return_statement
   18          | propose_statement
   19          | timeout_statement
   20          | timeout_behaviour_statement
   21          | if_statement
   22          | while_statement
   23          | for_statement
   24          | switch_statement

   25 blk_statement: statement
   26              | var_def

   27 block: '{' statements '}'
   28      | '{' '}'

   29 statements: blk_statement
   30           | blk_statement statements

   31 grammar_rule: VARIABLE ':' if_statement

   32 return_statement: RETURN ';'
   33                 | RETURN exp ';'
   34                 | BREAK ';'
   35                 | BREAK VARIABLE ';'
   36                 | CANCEL ';'
   37                 | CANCEL_ALL ';'
   38                 | CONTINUE ';'

   39 if_statement: IF '(' exp ')' statement
   40             | IF '(' exp ')' statement ELSE statement

   41 while_statement: WHILE '(' exp ')' statement
   42                | DO statement WHILE '(' exp ')'

   43 for_statement: FOR '(' var_def exp ';' exp ')' statement
   44              | FOR '(' var_def ';' exp ')' statement
   45              | FOR '(' var_def exp ';' ')' statement
   46              | FOR '(' var_def ';' ')' statement
   47              | FOR '(' ';' exp ';' exp ')' statement
   48              | FOR '(' VARIABLE ':' exp ')' statement
   49              | FOR '(' type_spec VARIABLE ':' exp ')' statement

   50 propose_statement: PROPOSE '(' exp ')' block

   51 timeout_behaviour_statement: TIMEOUT_BEHAVIOUR '(' exp ')' block

   52 timeout_statement: TIMEOUT '(' exp ',' exp ')' block

   53 switch_statement: SWITCH '(' exp ')' '{' switch_block '}'

   54 switch_block: switch_labels switch_cont

   55 switch_cont: statements switch_labels switch_cont
   56            | %empty

   57 switch_labels: switch_label switch_labels
   58              | switch_label

   59 switch_label: CASE STRING ':'
   60             | CASE INT ':'
   61             | CASE VARIABLE ':'
   62             | DEFAULT ':'

   63 var_def: FINAL VARIABLE assgn_exp ';'
   64        | type_spec VARIABLE assgn_exp ';'
   65        | FINAL type_spec VARIABLE assgn_exp ';'

   66 assgn_exp: '=' exp
   67          | '=' '{' '}'
   68          | '=' '{' nonempty_exp_list '}'

   69 nonempty_exp_list: exp
   70                  | exp ',' nonempty_exp_list

   71 method_declaration: class_spec type_spec VARIABLE '(' ')' opt_block
   72                   | class_spec type_spec VARIABLE '(' args_list opt_block
   73                   | class_spec VARIABLE '(' ')' opt_block
   74                   | class_spec VARIABLE '(' args_list opt_block
   75                   | type_spec VARIABLE '(' ')' opt_block
   76                   | type_spec VARIABLE '(' args_list opt_block
   77                   | VARIABLE '(' ')' block
   78                   | VARIABLE '(' args_list block

   79 class_spec: '[' type_spec '.' ']'

   80 opt_block: block
   81          | ';'

   82 args_list: VARIABLE ')'
   83          | type_spec VARIABLE ')'
   84          | VARIABLE ',' args_list
   85          | type_spec VARIABLE ',' args_list

   86 set_operation: VARIABLE PLUSEQ exp ';'
   87              | VARIABLE MINUSEQ exp ';'
   88              | ArrayAccess PLUSEQ exp ';'
   89              | ArrayAccess MINUSEQ exp ';'
   90              | field_access PLUSEQ exp ';'
   91              | field_access MINUSEQ exp ';'

   92 function_call: VARIABLE '(' ')'
   93              | VARIABLE '(' nonempty_args_list ')'

   94 nonempty_args_list: exp
   95                   | lambda_exp
   96                   | exp ',' nonempty_args_list
   97                   | lambda_exp ',' nonempty_args_list

   98 type_spec: VARIABLE '[' ']'
   99          | VARIABLE
  100          | parameterized_type

  101 parameterized_type: VARIABLE '<' type_spec_list '>'

  102 type_spec_list: type_spec
  103               | type_spec ',' type_spec_list

  104 exp: if_exp
  105    | assignment
  106    | ConditionalOrExpression
  107    | dialogueact_exp

  108 ConditionalOrExpression: ConditionalOrExpression OROR ConditionalAndExpression
  109                        | ConditionalAndExpression

  110 ConditionalAndExpression: ConditionalAndExpression ANDAND InclusiveOrExpression
  111                         | InclusiveOrExpression

  112 InclusiveOrExpression: ExclusiveOrExpression
  113                      | InclusiveOrExpression '|' ExclusiveOrExpression

  114 ExclusiveOrExpression: AndExpression
  115                      | ExclusiveOrExpression '^' AndExpression

  116 AndExpression: EqualityExpression
  117              | AndExpression '&' EqualityExpression

  118 EqualityExpression: RelationalExpression
  119                   | EqualityExpression EQEQ RelationalExpression
  120                   | EqualityExpression NOTEQ RelationalExpression

  121 RelationalExpression: AdditiveExpression
  122                     | RelationalExpression '<' AdditiveExpression
  123                     | RelationalExpression '>' AdditiveExpression
  124                     | RelationalExpression GTEQ AdditiveExpression
  125                     | RelationalExpression LTEQ AdditiveExpression

  126 AdditiveExpression: MultiplicativeExpression
  127                   | AdditiveExpression '+' MultiplicativeExpression
  128                   | AdditiveExpression '-' MultiplicativeExpression

  129 MultiplicativeExpression: CastExpression
  130                         | MultiplicativeExpression '*' CastExpression
  131                         | MultiplicativeExpression '/' CastExpression
  132                         | MultiplicativeExpression '%' CastExpression

  133 CastExpression: UnaryExpression
  134               | '(' type_spec ')' CastExpression

  135 LogicalUnaryExpression: PostfixExpression
  136                       | '!' UnaryExpression
  137                       | '~' UnaryExpression

  138 UnaryExpression: PLUSPLUS UnaryExpression
  139                | MINUSMINUS UnaryExpression
  140                | '+' CastExpression
  141                | '-' CastExpression
  142                | LogicalUnaryExpression

  143 PostfixExpression: PrimaryExpression

  144 PrimaryExpression: NULL
  145                  | NotJustName
  146                  | ComplexPrimary

  147 NotJustName: VARIABLE
  148            | new_exp

  149 ComplexPrimary: '(' exp ')'
  150               | ComplexPrimaryNoParenthesis

  151 ComplexPrimaryNoParenthesis: Literal
  152                            | ArrayAccess
  153                            | field_access
  154                            | function_call

  155 Literal: STRING
  156        | INT
  157        | OTHER_LITERAL

  158 ArrayAccess: VARIABLE '[' exp ']'
  159            | ComplexPrimary '[' exp ']'

  160 if_exp: exp '?' exp ':' exp

  161 assignment: VARIABLE assgn_exp
  162           | field_access assgn_exp
  163           | ArrayAccess assgn_exp

  164 field_access: NotJustName field_access_rest

  165 field_access_rest: '.' simple_nofa_exp field_access_rest
  166                  | '.' simple_nofa_exp

  167 simple_nofa_exp: VARIABLE
  168                | function_call
  169                | '(' exp ')'

  170 new_exp: NEW VARIABLE
  171        | NEW VARIABLE '(' ')'
  172        | NEW VARIABLE '(' nonempty_exp_list ')'
  173        | NEW parameterized_type '(' ')'
  174        | NEW parameterized_type '(' nonempty_exp_list ')'
  175        | NEW VARIABLE '[' exp ']'

  176 lambda_exp: '(' args_list ARROW exp
  177           | '(' args_list ARROW block
  178           | '(' ')' ARROW exp
  179           | '(' ')' ARROW block

  180 dialogueact_exp: '#' da_token '(' da_token ')'
  181                | '#' da_token '(' da_token da_args ')'

  182 da_token: '^' exp
  183         | VARIABLE
  184         | STRING
  185         | WILDCARD

  186 da_args: ',' da_token '=' da_token da_args
  187        | %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 136
'#' (35) 180 181
'%' (37) 132
'&' (38) 117
'(' (40) 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 71 72 73 74 75
    76 77 78 92 93 134 149 169 171 172 173 174 176 177 178 179 180
    181
')' (41) 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 71 73 75 77 82
    83 92 93 134 149 169 171 172 173 174 178 179 180 181
'*' (42) 130
'+' (43) 127 140
',' (44) 52 70 84 85 96 97 103 186
'-' (45) 128 141
'.' (46) 12 79 165 166
'/' (47) 131
':' (58) 31 48 49 59 60 61 62 160
';' (59) 10 14 32 33 34 35 36 37 38 43 44 45 46 47 63 64 65 81 86 87
    88 89 90 91
'<' (60) 101 122
'=' (61) 66 67 68 186
'>' (62) 101 123
'?' (63) 160
'[' (91) 79 98 158 159 175
']' (93) 79 98 158 159 175
'^' (94) 115 182
'{' (123) 27 28 53 67 68
'|' (124) 113
'}' (125) 27 28 53 67 68
'~' (126) 137
error (256)
BREAK (258) 34 35
CANCEL (259) 36
CANCEL_ALL (260) 37
CASE (261) 59 60 61
CONTINUE (262) 38
DEFAULT (263) 62
DO (264) 42
ELSE (265) 40
FINAL (266) 63 65
FOR (267) 43 44 45 46 47 48 49
IF (268) 39 40
IMPORT (269) 10
NEW (270) 170 171 172 173 174 175
NULL (271) 144
PRIVATE (272) 9
PROPOSE (273) 50
PROTECTED (274) 8
PUBLIC (275) 7
RETURN (276) 32 33
SWITCH (277) 53
TIMEOUT (278) 52
TIMEOUT_BEHAVIOUR (279) 51
WHILE (280) 41 42
ARROW (281) 176 177 178 179
ANDAND (282) 110
OROR (283) 108
EQEQ (284) 119
NOTEQ (285) 120
GTEQ (286) 124
LTEQ (287) 125
MINUSEQ (288) 87 89 91
PLUSEQ (289) 86 88 90
MINUSMINUS (290) 139
PLUSPLUS (291) 138
STRING (292) 59 155 184
WILDCARD (293) 185
INT (294) 60 156
VARIABLE (295) 10 12 31 35 48 49 61 63 64 65 71 72 73 74 75 76 77 78
    82 83 84 85 86 87 92 93 98 99 101 147 158 161 167 170 171 172 175
    183
OTHER_LITERAL (296) 157


Nonterminals, with rules where they appear

$accept (67)
    on left: 0
grammar_file (68)
    on left: 1 2 3 4 5 6, on right: 0 1 2 3 4 5
visibility_spec (69)
    on left: 7 8 9, on right: 1 5
imports (70)
    on left: 10, on right: 4
path (71)
    on left: 11 12, on right: 10 12
statement (72)
    on left: 13 14 15 16 17 18 19 20 21 22 23 24, on right: 3 25 39
    40 41 42 43 44 45 46 47 48 49
blk_statement (73)
    on left: 25 26, on right: 29 30
block (74)
    on left: 27 28, on right: 13 50 51 52 77 78 80 177 179
statements (75)
    on left: 29 30, on right: 27 30 55
grammar_rule (76)
    on left: 31, on right: 15
return_statement (77)
    on left: 32 33 34 35 36 37 38, on right: 17
if_statement (78)
    on left: 39 40, on right: 21 31
while_statement (79)
    on left: 41 42, on right: 22
for_statement (80)
    on left: 43 44 45 46 47 48 49, on right: 23
propose_statement (81)
    on left: 50, on right: 18
timeout_behaviour_statement (82)
    on left: 51, on right: 20
timeout_statement (83)
    on left: 52, on right: 19
switch_statement (84)
    on left: 53, on right: 24
switch_block (85)
    on left: 54, on right: 53
switch_cont (86)
    on left: 55 56, on right: 54 55
switch_labels (87)
    on left: 57 58, on right: 54 55 57
switch_label (88)
    on left: 59 60 61 62, on right: 57 58
var_def (89)
    on left: 63 64 65, on right: 5 26 43 44 45 46
assgn_exp (90)
    on left: 66 67 68, on right: 63 64 65 161 162 163
nonempty_exp_list (91)
    on left: 69 70, on right: 68 70 172 174
method_declaration (92)
    on left: 71 72 73 74 75 76 77 78, on right: 1 2
class_spec (93)
    on left: 79, on right: 71 72 73 74
opt_block (94)
    on left: 80 81, on right: 71 72 73 74 75 76
args_list (95)
    on left: 82 83 84 85, on right: 72 74 76 78 84 85 176 177
set_operation (96)
    on left: 86 87 88 89 90 91, on right: 16
function_call (97)
    on left: 92 93, on right: 154 168
nonempty_args_list (98)
    on left: 94 95 96 97, on right: 93 96 97
type_spec (99)
    on left: 98 99 100, on right: 49 64 65 71 72 75 76 79 83 85 102
    103 134
parameterized_type (100)
    on left: 101, on right: 100 173 174
type_spec_list (101)
    on left: 102 103, on right: 101 103
exp (102)
    on left: 104 105 106 107, on right: 14 33 39 40 41 42 43 44 45
    47 48 49 50 51 52 53 66 69 70 86 87 88 89 90 91 94 96 149 158 159
    160 169 175 176 178 182
ConditionalOrExpression (103)
    on left: 108 109, on right: 106 108
ConditionalAndExpression (104)
    on left: 110 111, on right: 108 109 110
InclusiveOrExpression (105)
    on left: 112 113, on right: 110 111 113
ExclusiveOrExpression (106)
    on left: 114 115, on right: 112 113 115
AndExpression (107)
    on left: 116 117, on right: 114 115 117
EqualityExpression (108)
    on left: 118 119 120, on right: 116 117 119 120
RelationalExpression (109)
    on left: 121 122 123 124 125, on right: 118 119 120 122 123 124
    125
AdditiveExpression (110)
    on left: 126 127 128, on right: 121 122 123 124 125 127 128
MultiplicativeExpression (111)
    on left: 129 130 131 132, on right: 126 127 128 130 131 132
CastExpression (112)
    on left: 133 134, on right: 129 130 131 132 134 140 141
LogicalUnaryExpression (113)
    on left: 135 136 137, on right: 142
UnaryExpression (114)
    on left: 138 139 140 141 142, on right: 133 136 137 138 139
PostfixExpression (115)
    on left: 143, on right: 135
PrimaryExpression (116)
    on left: 144 145 146, on right: 143
NotJustName (117)
    on left: 147 148, on right: 145 164
ComplexPrimary (118)
    on left: 149 150, on right: 146 159
ComplexPrimaryNoParenthesis (119)
    on left: 151 152 153 154, on right: 150
Literal (120)
    on left: 155 156 157, on right: 151
ArrayAccess (121)
    on left: 158 159, on right: 88 89 152 163
if_exp (122)
    on left: 160, on right: 104
assignment (123)
    on left: 161 162 163, on right: 105
field_access (124)
    on left: 164, on right: 90 91 153 162
field_access_rest (125)
    on left: 165 166, on right: 164 165
simple_nofa_exp (126)
    on left: 167 168 169, on right: 165 166
new_exp (127)
    on left: 170 171 172 173 174 175, on right: 148
lambda_exp (128)
    on left: 176 177 178 179, on right: 95 97
dialogueact_exp (129)
    on left: 180 181, on right: 107
da_token (130)
    on left: 182 183 184 185, on right: 180 181 186
da_args (131)
    on left: 186 187, on right: 181 186


State 0

    0 $accept: . grammar_file $end
    1 grammar_file: . visibility_spec method_declaration grammar_file
    2             | . method_declaration grammar_file
    3             | . statement grammar_file
    4             | . imports grammar_file
    5             | . visibility_spec var_def grammar_file
    6             | . %empty  [$end]
    7 visibility_spec: . PUBLIC
    8                | . PROTECTED
    9                | . PRIVATE
   10 imports: . IMPORT VARIABLE path ';'
   13 statement: . block
   14          | . exp ';'
   15          | . grammar_rule
   16          | . set_operation
   17          | . return_statement
   18          | . propose_statement
   19          | . timeout_statement
   20          | . timeout_behaviour_statement
   21          | . if_statement
   22          | . while_statement
   23          | . for_statement
   24          | . switch_statement
   27 block: . '{' statements '}'
   28      | . '{' '}'
   31 grammar_rule: . VARIABLE ':' if_statement
   32 return_statement: . RETURN ';'
   33                 | . RETURN exp ';'
   34                 | . BREAK ';'
   35                 | . BREAK VARIABLE ';'
   36                 | . CANCEL ';'
   37                 | . CANCEL_ALL ';'
   38                 | . CONTINUE ';'
   39 if_statement: . IF '(' exp ')' statement
   40             | . IF '(' exp ')' statement ELSE statement
   41 while_statement: . WHILE '(' exp ')' statement
   42                | . DO statement WHILE '(' exp ')'
   43 for_statement: . FOR '(' var_def exp ';' exp ')' statement
   44              | . FOR '(' var_def ';' exp ')' statement
   45              | . FOR '(' var_def exp ';' ')' statement
   46              | . FOR '(' var_def ';' ')' statement
   47              | . FOR '(' ';' exp ';' exp ')' statement
   48              | . FOR '(' VARIABLE ':' exp ')' statement
   49              | . FOR '(' type_spec VARIABLE ':' exp ')' statement
   50 propose_statement: . PROPOSE '(' exp ')' block
   51 timeout_behaviour_statement: . TIMEOUT_BEHAVIOUR '(' exp ')' block
   52 timeout_statement: . TIMEOUT '(' exp ',' exp ')' block
   53 switch_statement: . SWITCH '(' exp ')' '{' switch_block '}'
   71 method_declaration: . class_spec type_spec VARIABLE '(' ')' opt_block
   72                   | . class_spec type_spec VARIABLE '(' args_list opt_block
   73                   | . class_spec VARIABLE '(' ')' opt_block
   74                   | . class_spec VARIABLE '(' args_list opt_block
   75                   | . type_spec VARIABLE '(' ')' opt_block
   76                   | . type_spec VARIABLE '(' args_list opt_block
   77                   | . VARIABLE '(' ')' block
   78                   | . VARIABLE '(' args_list block
   79 class_spec: . '[' type_spec '.' ']'
   86 set_operation: . VARIABLE PLUSEQ exp ';'
   87              | . VARIABLE MINUSEQ exp ';'
   88              | . ArrayAccess PLUSEQ exp ';'
   89              | . ArrayAccess MINUSEQ exp ';'
   90              | . field_access PLUSEQ exp ';'
   91              | . field_access MINUSEQ exp ';'
   92 function_call: . VARIABLE '(' ')'
   93              | . VARIABLE '(' nonempty_args_list ')'
   98 type_spec: . VARIABLE '[' ']'
   99          | . VARIABLE
  100          | . parameterized_type
  101 parameterized_type: . VARIABLE '<' type_spec_list '>'
  104 exp: . if_exp
  105    | . assignment
  106    | . ConditionalOrExpression
  107    | . dialogueact_exp
  108 ConditionalOrExpression: . ConditionalOrExpression OROR ConditionalAndExpression
  109                        | . ConditionalAndExpression
  110 ConditionalAndExpression: . ConditionalAndExpression ANDAND InclusiveOrExpression
  111                         | . InclusiveOrExpression
  112 InclusiveOrExpression: . ExclusiveOrExpression
  113                      | . InclusiveOrExpression '|' ExclusiveOrExpression
  114 ExclusiveOrExpression: . AndExpression
  115                      | . ExclusiveOrExpression '^' AndExpression
  116 AndExpression: . EqualityExpression
  117              | . AndExpression '&' EqualityExpression
  118 EqualityExpression: . RelationalExpression
  119                   | . EqualityExpression EQEQ RelationalExpression
  120                   | . EqualityExpression NOTEQ RelationalExpression
  121 RelationalExpression: . AdditiveExpression
  122                     | . RelationalExpression '<' AdditiveExpression
  123                     | . RelationalExpression '>' AdditiveExpression
  124                     | . RelationalExpression GTEQ AdditiveExpression
  125                     | . RelationalExpression LTEQ AdditiveExpression
  126 AdditiveExpression: . MultiplicativeExpression
  127                   | . AdditiveExpression '+' MultiplicativeExpression
  128                   | . AdditiveExpression '-' MultiplicativeExpression
  129 MultiplicativeExpression: . CastExpression
  130                         | . MultiplicativeExpression '*' CastExpression
  131                         | . MultiplicativeExpression '/' CastExpression
  132                         | . MultiplicativeExpression '%' CastExpression
  133 CastExpression: . UnaryExpression
  134               | . '(' type_spec ')' CastExpression
  135 LogicalUnaryExpression: . PostfixExpression
  136                       | . '!' UnaryExpression
  137                       | . '~' UnaryExpression
  138 UnaryExpression: . PLUSPLUS UnaryExpression
  139                | . MINUSMINUS UnaryExpression
  140                | . '+' CastExpression
  141                | . '-' CastExpression
  142                | . LogicalUnaryExpression
  143 PostfixExpression: . PrimaryExpression
  144 PrimaryExpression: . NULL
  145                  | . NotJustName
  146                  | . ComplexPrimary
  147 NotJustName: . VARIABLE
  148            | . new_exp
  149 ComplexPrimary: . '(' exp ')'
  150               | . ComplexPrimaryNoParenthesis
  151 ComplexPrimaryNoParenthesis: . Literal
  152                            | . ArrayAccess
  153                            | . field_access
  154                            | . function_call
  155 Literal: . STRING
  156        | . INT
  157        | . OTHER_LITERAL
  158 ArrayAccess: . VARIABLE '[' exp ']'
  159            | . ComplexPrimary '[' exp ']'
  160 if_exp: . exp '?' exp ':' exp
  161 assignment: . VARIABLE assgn_exp
  162           | . field_access assgn_exp
  163           | . ArrayAccess assgn_exp
  164 field_access: . NotJustName field_access_rest
  170 new_exp: . NEW VARIABLE
  171        | . NEW VARIABLE '(' ')'
  172        | . NEW VARIABLE '(' nonempty_exp_list ')'
  173        | . NEW parameterized_type '(' ')'
  174        | . NEW parameterized_type '(' nonempty_exp_list ')'
  175        | . NEW VARIABLE '[' exp ']'
  180 dialogueact_exp: . '#' da_token '(' da_token ')'
  181                | . '#' da_token '(' da_token da_args ')'

    BREAK              shift, and go to state 1
    CANCEL             shift, and go to state 2
    CANCEL_ALL         shift, and go to state 3
    CONTINUE           shift, and go to state 4
    DO                 shift, and go to state 5
    FOR                shift, and go to state 6
    IF                 shift, and go to state 7
    IMPORT             shift, and go to state 8
    NEW                shift, and go to state 9
    NULL               shift, and go to state 10
    PRIVATE            shift, and go to state 11
    PROPOSE            shift, and go to state 12
    PROTECTED          shift, and go to state 13
    PUBLIC             shift, and go to state 14
    RETURN             shift, and go to state 15
    SWITCH             shift, and go to state 16
    TIMEOUT            shift, and go to state 17
    TIMEOUT_BEHAVIOUR  shift, and go to state 18
    WHILE              shift, and go to state 19
    MINUSMINUS         shift, and go to state 20
    PLUSPLUS           shift, and go to state 21
    STRING             shift, and go to state 22
    INT                shift, and go to state 23
    VARIABLE           shift, and go to state 24
    OTHER_LITERAL      shift, and go to state 25
    '{'                shift, and go to state 26
    '('                shift, and go to state 27
    '['                shift, and go to state 28
    '+'                shift, and go to state 29
    '-'                shift, and go to state 30
    '!'                shift, and go to state 31
    '~'                shift, and go to state 32
    '#'                shift, and go to state 33

    $default  reduce using rule 6 (grammar_file)

    grammar_file                 go to state 34
    visibility_spec              go to state 35
    imports                      go to state 36
    statement                    go to state 37
    block                        go to state 38
    grammar_rule                 go to state 39
    return_statement             go to state 40
    if_statement                 go to state 41
    while_statement              go to state 42
    for_statement                go to state 43
    propose_statement            go to state 44
    timeout_behaviour_statement  go to state 45
    timeout_statement            go to state 46
    switch_statement             go to state 47
    method_declaration           go to state 48
    class_spec                   go to state 49
    set_operation                go to state 50
    function_call                go to state 51
    type_spec                    go to state 52
    parameterized_type           go to state 53
    exp                          go to state 54
    ConditionalOrExpression      go to state 55
    ConditionalAndExpression     go to state 56
    InclusiveOrExpression        go to state 57
    ExclusiveOrExpression        go to state 58
    AndExpression                go to state 59
    EqualityExpression           go to state 60
    RelationalExpression         go to state 61
    AdditiveExpression           go to state 62
    MultiplicativeExpression     go to state 63
    CastExpression               go to state 64
    LogicalUnaryExpression       go to state 65
    UnaryExpression              go to state 66
    PostfixExpression            go to state 67
    PrimaryExpression            go to state 68
    NotJustName                  go to state 69
    ComplexPrimary               go to state 70
    ComplexPrimaryNoParenthesis  go to state 71
    Literal                      go to state 72
    ArrayAccess                  go to state 73
    if_exp                       go to state 74
    assignment                   go to state 75
    field_access                 go to state 76
    new_exp                      go to state 77
    dialogueact_exp              go to state 78


State 1

   34 return_statement: BREAK . ';'
   35                 | BREAK . VARIABLE ';'

    VARIABLE  shift, and go to state 79
    ';'       shift, and go to state 80


State 2

   36 return_statement: CANCEL . ';'

    ';'  shift, and go to state 81


State 3

   37 return_statement: CANCEL_ALL . ';'

    ';'  shift, and go to state 82


State 4

   38 return_statement: CONTINUE . ';'

    ';'  shift, and go to state 83


State 5

   13 statement: . block
   14          | . exp ';'
   15          | . grammar_rule
   16          | . set_operation
   17          | . return_statement
   18          | . propose_statement
   19          | . timeout_statement
   20          | . timeout_behaviour_statement
   21          | . if_statement
   22          | . while_statement
   23          | . for_statement
   24          | . switch_statement
   27 block: . '{' statements '}'
   28      | . '{' '}'
   31 grammar_rule: . VARIABLE ':' if_statement
   32 return_statement: . RETURN ';'
   33                 | . RETURN exp ';'
   34                 | . BREAK ';'
   35                 | . BREAK VARIABLE ';'
   36                 | . CANCEL ';'
   37                 | . CANCEL_ALL ';'
   38                 | . CONTINUE ';'
   39 if_statement: . IF '(' exp ')' statement
   40             | . IF '(' exp ')' statement ELSE statement
   41 while_statement: . WHILE '(' exp ')' statement
   42                | . DO statement WHILE '(' exp ')'
   42                | DO . statement WHILE '(' exp ')'
   43 for_statement: . FOR '(' var_def exp ';' exp ')' statement
   44              | . FOR '(' var_def ';' exp ')' statement
   45              | . FOR '(' var_def exp ';' ')' statement
   46              | . FOR '(' var_def ';' ')' statement
   47              | . FOR '(' ';' exp ';' exp ')' statement
   48              | . FOR '(' VARIABLE ':' exp ')' statement
   49              | . FOR '(' type_spec VARIABLE ':' exp ')' statement
   50 propose_statement: . PROPOSE '(' exp ')' block
   51 timeout_behaviour_statement: . TIMEOUT_BEHAVIOUR '(' exp ')' block
   52 timeout_statement: . TIMEOUT '(' exp ',' exp ')' block
   53 switch_statement: . SWITCH '(' exp ')' '{' switch_block '}'
   86 set_operation: . VARIABLE PLUSEQ exp ';'
   87              | . VARIABLE MINUSEQ exp ';'
   88              | . ArrayAccess PLUSEQ exp ';'
   89              | . ArrayAccess MINUSEQ exp ';'
   90              | . field_access PLUSEQ exp ';'
   91              | . field_access MINUSEQ exp ';'
   92 function_call: . VARIABLE '(' ')'
   93              | . VARIABLE '(' nonempty_args_list ')'
  104 exp: . if_exp
  105    | . assignment
  106    | . ConditionalOrExpression
  107    | . dialogueact_exp
  108 ConditionalOrExpression: . ConditionalOrExpression OROR ConditionalAndExpression
  109                        | . ConditionalAndExpression
  110 ConditionalAndExpression: . ConditionalAndExpression ANDAND InclusiveOrExpression
  111                         | . InclusiveOrExpression
  112 InclusiveOrExpression: . ExclusiveOrExpression
  113                      | . InclusiveOrExpression '|' ExclusiveOrExpression
  114 ExclusiveOrExpression: . AndExpression
  115                      | . ExclusiveOrExpression '^' AndExpression
  116 AndExpression: . EqualityExpression
  117              | . AndExpression '&' EqualityExpression
  118 EqualityExpression: . RelationalExpression
  119                   | . EqualityExpression EQEQ RelationalExpression
  120                   | . EqualityExpression NOTEQ RelationalExpression
  121 RelationalExpression: . AdditiveExpression
  122                     | . RelationalExpression '<' AdditiveExpression
  123                     | . RelationalExpression '>' AdditiveExpression
  124                     | . RelationalExpression GTEQ AdditiveExpression
  125                     | . RelationalExpression LTEQ AdditiveExpression
  126 AdditiveExpression: . MultiplicativeExpression
  127                   | . AdditiveExpression '+' MultiplicativeExpression
  128                   | . AdditiveExpression '-' MultiplicativeExpression
  129 MultiplicativeExpression: . CastExpression
  130                         | . MultiplicativeExpression '*' CastExpression
  131                         | . MultiplicativeExpression '/' CastExpression
  132                         | . MultiplicativeExpression '%' CastExpression
  133 CastExpression: . UnaryExpression
  134               | . '(' type_spec ')' CastExpression
  135 LogicalUnaryExpression: . PostfixExpression
  136                       | . '!' UnaryExpression
  137                       | . '~' UnaryExpression
  138 UnaryExpression: . PLUSPLUS UnaryExpression
  139                | . MINUSMINUS UnaryExpression
  140                | . '+' CastExpression
  141                | . '-' CastExpression
  142                | . LogicalUnaryExpression
  143 PostfixExpression: . PrimaryExpression
  144 PrimaryExpression: . NULL
  145                  | . NotJustName
  146                  | . ComplexPrimary
  147 NotJustName: . VARIABLE
  148            | . new_exp
  149 ComplexPrimary: . '(' exp ')'
  150               | . ComplexPrimaryNoParenthesis
  151 ComplexPrimaryNoParenthesis: . Literal
  152                            | . ArrayAccess
  153                            | . field_access
  154                            | . function_call
  155 Literal: . STRING
  156        | . INT
  157        | . OTHER_LITERAL
  158 ArrayAccess: . VARIABLE '[' exp ']'
  159            | . ComplexPrimary '[' exp ']'
  160 if_exp: . exp '?' exp ':' exp
  161 assignment: . VARIABLE assgn_exp
  162           | . field_access assgn_exp
  163           | . ArrayAccess assgn_exp
  164 field_access: . NotJustName field_access_rest
  170 new_exp: . NEW VARIABLE
  171        | . NEW VARIABLE '(' ')'
  172        | . NEW VARIABLE '(' nonempty_exp_list ')'
  173        | . NEW parameterized_type '(' ')'
  174        | . NEW parameterized_type '(' nonempty_exp_list ')'
  175        | . NEW VARIABLE '[' exp ']'
  180 dialogueact_exp: . '#' da_token '(' da_token ')'
  181                | . '#' da_token '(' da_token da_args ')'

    BREAK              shift, and go to state 1
    CANCEL             shift, and go to state 2
    CANCEL_ALL         shift, and go to state 3
    CONTINUE           shift, and go to state 4
    DO                 shift, and go to state 5
    FOR                shift, and go to state 6
    IF                 shift, and go to state 7
    NEW                shift, and go to state 9
    NULL               shift, and go to state 10
    PROPOSE            shift, and go to state 12
    RETURN             shift, and go to state 15
    SWITCH             shift, and go to state 16
    TIMEOUT            shift, and go to state 17
    TIMEOUT_BEHAVIOUR  shift, and go to state 18
    WHILE              shift, and go to state 19
    MINUSMINUS         shift, and go to state 20
    PLUSPLUS           shift, and go to state 21
    STRING             shift, and go to state 22
    INT                shift, and go to state 23
    VARIABLE           shift, and go to state 84
    OTHER_LITERAL      shift, and go to state 25
    '{'                shift, and go to state 26
    '('                shift, and go to state 27
    '+'                shift, and go to state 29
    '-'                shift, and go to state 30
    '!'                shift, and go to state 31
    '~'                shift, and go to state 32
    '#'                shift, and go to state 33

    statement                    go to state 85
    block                        go to state 38
    grammar_rule                 go to state 39
    return_statement             go to state 40
    if_statement                 go to state 41
    while_statement              go to state 42
    for_statement                go to state 43
    propose_statement            go to state 44
    timeout_behaviour_statement  go to state 45
    timeout_statement            go to state 46
    switch_statement             go to state 47
    set_operation                go to state 50
    function_call                go to state 51
    exp                          go to state 54
    ConditionalOrExpression      go to state 55
    ConditionalAndExpression     go to state 56
    InclusiveOrExpression        go to state 57
    ExclusiveOrExpression        go to state 58
    AndExpression                go to state 59
    EqualityExpression           go to state 60
    RelationalExpression         go to state 61
    AdditiveExpression           go to state 62
    MultiplicativeExpression     go to state 63
    CastExpression               go to state 64
    LogicalUnaryExpression       go to state 65
    UnaryExpression              go to state 66
    PostfixExpression            go to state 67
    PrimaryExpression            go to state 68
    NotJustName                  go to state 69
    ComplexPrimary               go to state 70
    ComplexPrimaryNoParenthesis  go to state 71
    Literal                      go to state 72
    ArrayAccess                  go to state 73
    if_exp                       go to state 74
    assignment                   go to state 75
    field_access                 go to state 76
    new_exp                      go to state 77
    dialogueact_exp              go to state 78


State 6
